--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -107,17 +107,17 @@
     --sm: 0.25rem;
     --md: 0.5rem;
     --lg: 1rem;
-    --XL: 2rem;
+    --xl: 2rem;
 
     --fs_xs: 0.8rem;
     --fs_s: 1rem;
-    --fs_N: 1.4rem;
-    --fs_L: 1.8rem;
-    --fs_X: 4rem;
-    --fs_XL: 6rem;
-    --FW_L: 200;
-    --FW_N: 400;
-    --FW_B: 600;
+    --fs_n: 1.4rem;
+    --fs_l: 1.8rem;
+    --fs_x: 4rem;
+    --fs_xl: 6rem;
+    --fw_l: 200;
+    --fw_n: 400;
+    --fw_b: 600;
 
     --nvh_f: 6rem;
     --nvh: 8rem;
@@ -139,8 +139,8 @@
 //!THEMES START
 .light {
     --fc: var(--logoPurpleL);
-    --SC: var(--logoMintL);
-    --H: var(--purpleDark);
+    --sc: var(--logoMintL);
+    --h: var(--purpleDark);
     --tc: var(--black);
     --bgC: var(--white);
     --bgC_off: var(--whiteOff);
@@ -152,8 +152,8 @@
 }
 .dark {
     --fc: var(--logoMintD);
-    --SC: var(--logoPurpleD);
-    --H: var(--mintLigth);
+    --sc: var(--logoPurpleD);
+    --h: var(--mintLigth);
     --tc: var(--white);
     --bgC: var(--black);
     --bgC_off: var(--blackOff);
@@ -189,7 +189,7 @@ BODY {
     --bgDanger: var(--bgLightRed);
     --good: var(--greenTeal);
     --bgGood: var(--bgGreenTeal);
-    --btnGradient: linear-gradient(45deg, var(--fc), var(--SC));
+    --btnGradient: linear-gradient(45deg, var(--fc), var(--sc));
 
     --shadow: var(--blackST);
     color: var(--tc);
@@ -210,7 +210,7 @@ BODY {
     width: 100%;
     height: 100%;
     -webkit-text-size-adjust: 100%;
-    scrollbar-color: var(--fc) var(--SC);
+    scrollbar-color: var(--fc) var(--sc);
     scrollbar-width: thin;
     &:focus-within {
         scroll-behavior: smooth;
@@ -279,24 +279,24 @@ H4 {
 H1,
 H2 {
     text-align: center;
-    font-weight: var(--FW_B);
+    font-weight: var(--fw_b);
 }
 H1 {
     color: var(--fc);
-    font-weight: var(--FW_B);
+    font-weight: var(--fw_b);
     font-size: var(--fontSizeXClamp);
 }
 H2 {
     font-size: var(--fontSizeMClamp);
-    font-weight: var(--FW_B);
+    font-weight: var(--fw_b);
     color: var(--tc);
 }
 H3 {
-    font-size: var(--fs_N);
-    font-weight: var(--FW_B);
+    font-size: var(--fs_n);
+    font-weight: var(--fw_b);
 }
 P {
-    font-size: var(--fs_N);
+    font-size: var(--fs_n);
     color: var(--tc);
     text-wrap: pretty;
 }
@@ -310,7 +310,7 @@ I {
 //^ CLIENTS LOGO COLORS
 .accent_text {
     color: var(--fc);
-    font-weight: var(--FW_B);
+    font-weight: var(--fw_b);
 }
 .desk_me {
     transition: all 1000ms ease-in-out;
@@ -356,7 +356,7 @@ I {
     .cls-10,
     .cls-23,
     .cls-59 {
-        fill: var(--SC);
+        fill: var(--sc);
     }
 
     .cls-10,
@@ -678,7 +678,7 @@ I {
         fill: var(--tc);
     }
     .cls-2 {
-        fill: var(--SC);
+        fill: var(--sc);
     }
     .cls-3 {
         fill: #fafafa;
@@ -895,8 +895,8 @@ I {
 }
 .label_btn {
     /* font-family: var(--titanimFont); */
-    font-size: var(--fs_N);
-    font-weight: var(--FW_N);
+    font-size: var(--fs_n);
+    font-weight: var(--fw_n);
     display: block;
     line-height: 1;
     font-weight: 600;
@@ -909,8 +909,8 @@ I {
     border-radius: 50%;
 }
 .accent_color {
-    color: var(--SC);
-    fill: var(--SC);
+    color: var(--sc);
+    fill: var(--sc);
 }
 .accessibility_btn {
     position: fixed;
@@ -921,7 +921,7 @@ I {
     text-align: center;
     background: var(--fc);
     color: var(--bgC);
-    font-size: var(--fs_L);
+    font-size: var(--fs_l);
     padding: var(--lg);
     transition: var(--t_f);
     translate: 0 -100%;
@@ -986,7 +986,7 @@ I {
     }
     .photo {
         position: absolute;
-        top: var(--XL);
+        top: var(--xl);
         left: 50%;
         transform: translateX(-50%);
         width: 6rem;
@@ -998,12 +998,12 @@ I {
     }
     .name {
         color: var(--fc);
-        font-size: var(--fs_L);
+        font-size: var(--fs_l);
         text-align: center;
     }
     .skill,
     .place {
-        font-size: var(--fs_N);
+        font-size: var(--fs_n);
         line-height: 1;
         text-align: center;
         @include flexCenter();
@@ -1035,7 +1035,7 @@ I {
     gap: var(--md);
     border: var(--border);
     .description {
-        line-height: 1var (--XL);
+        line-height: 1var (--xl);
         text-align: center;
     }
 }
@@ -1045,7 +1045,7 @@ I {
     width: 100%;
     color: var(--bgC);
     outline: solid 2px var(--fc);
-    border-radius: var(--XL);
+    border-radius: var(--xl);
     text-align: center;
     padding: var(--lg) var(--md);
     cursor: pointer;
@@ -1053,7 +1053,7 @@ I {
     .label_btn {
         transition: var(--t_f);
         color: var(--tc);
-        font-weight: var(--FW_B);
+        font-weight: var(--fw_b);
     }
     &:hover,
     &:active,
@@ -1075,7 +1075,7 @@ I {
     margin-top: 4rem;
     .arrow_down_svg {
         margin-top: var(--lg);
-        width: var(--XL);
+        width: var(--xl);
         animation: bounceDown 1s ease infinite;
         transition: var(--t_f);
     }
@@ -1115,7 +1115,7 @@ I {
         width: auto;
     }
     &:hover {
-        background: var(--H);
+        background: var(--h);
         color: var(--bgC);
         .icon_container {
             fill: var(--bgC) !important;
@@ -1135,8 +1135,8 @@ I {
 }
 .more_btn {
     color: var(--tc);
-    font-weight: var(--FW_B);
-    font-size: var(--fs_N);
+    font-weight: var(--fw_b);
+    font-size: var(--fs_n);
     &:hover {
         color: var(--whiteOff);
     }
@@ -1144,8 +1144,8 @@ I {
 .link_btn {
     color: var(--midGray);
     .label_btn {
-        font-size: var(--fs_N);
-        font-weight: var(--FW_L);
+        font-size: var(--fs_n);
+        font-weight: var(--fw_l);
     }
 }
 .close_control {
@@ -1155,7 +1155,7 @@ I {
 }
 .phone_menu_btn {
     width: 100%;
-    font-size: var(--fs_N);
+    font-size: var(--fs_n);
     color: var(--tc);
     @include flexCenter();
     .icon_container {
@@ -1167,7 +1167,7 @@ I {
         }
     }
     &:hover:not(.extra_btn) {
-        background: var(--H);
+        background: var(--h);
         color: var(--bgC);
     }
 }
@@ -1240,7 +1240,7 @@ I {
             fill: var(--fc);
         }
         .dot {
-            fill: var(--SC);
+            fill: var(--sc);
         }
     }
     .johnK_icon {
@@ -1269,7 +1269,7 @@ I {
 .bullet {
     background: var(--bgC_t);
     width: calc(100% - var(--iconD));
-    padding: var(--XL);
+    padding: var(--xl);
     H1 {
         margin-bottom: var(--lg);
     }
@@ -1279,13 +1279,13 @@ I {
 }
 .flex_responsive {
     @include flex(column, flex-start, center);
-    gap: var(--XL);
+    gap: var(--xl);
     .responsive_content {
         width: 100%;
     }
 }
 .subtitle_section {
-    margin: var(--XL) 0 var(--lg);
+    margin: var(--xl) 0 var(--lg);
 }
 .title_section {
     @include flexCenter();
@@ -1293,7 +1293,7 @@ I {
     height: auto;
     -webkit-text-stroke: 1px var(--fc);
     color: transparent;
-    font-size: var(--fs_X);
+    font-size: var(--fs_x);
 }
 
 .animated_social_btn {
@@ -1326,7 +1326,7 @@ I {
     }
     .info_container {
         color: var(--tc);
-        padding: var(--lg) 1.5rem var(--XL);
+        padding: var(--lg) 1.5rem var(--xl);
         transition: var(--t_s);
         P,
         H3,
@@ -1341,7 +1341,7 @@ I {
         transition: all 500ms ease-in-out;
         @include flex(column, flex-start, center);
         background: var(--bgC_st);
-        padding: var(--XL) 0;
+        padding: var(--xl) 0;
         width: 100%;
         height: 100%;
         H2 {
@@ -1412,7 +1412,7 @@ I {
         flex-direction: column;
         width: 100%;
         height: 100%;
-        padding: var(--XL);
+        padding: var(--xl);
         transition: var(--t_f);
         background: var(--bgC_t);
         transform: translateY(100%);
@@ -1420,7 +1420,7 @@ I {
         .title {
             width: 100%;
             text-align: center;
-            font-size: var(--fs_L);
+            font-size: var(--fs_l);
             color: var(--fc);
             margin-bottom: var(--md);
             line-height: 1;
@@ -1428,7 +1428,7 @@ I {
         .subtitle {
             width: 100%;
             text-align: center;
-            font-size: var(--fs_N);
+            font-size: var(--fs_n);
         }
         .icons_project_container {
             @include flexCenter();
@@ -1489,7 +1489,7 @@ I {
     grid-template-columns: repeat(auto-fit, minmax(150px, 8fr));
     gap: 0;
     min-height: auto;
-    padding: var(--XL) 0;
+    padding: var(--xl) 0;
     .service_card {
         grid-column: span 2;
     }
@@ -1498,14 +1498,14 @@ I {
     width: 100%;
     @include flex(row, space-between, center);
     border-bottom: solid 2px var(--fc);
-    padding: var(--XL) 0 var(--lg);
+    padding: var(--xl) 0 var(--lg);
     margin-bottom: var(--lg);
     .subtitle_section {
         margin: 0;
     }
     .portfolio_btn {
         width: fit-content;
-        font-size: var(--fs_L);
+        font-size: var(--fs_l);
         color: var(--midGray);
     }
 }
@@ -1645,12 +1645,12 @@ I {
     .form_response {
         text-align: center;
 
-        font-size: var(--fs_L);
+        font-size: var(--fs_l);
     }
 }
 .contact_form {
     background: var(--bgC_off);
-    padding: var(--XL);
+    padding: var(--xl);
     border-radius: var(--lg);
     .form_response_container {
         width: calc(100% - 6rem);
@@ -1667,8 +1667,8 @@ I {
     transition: var(--t_M);
     transform: translate(-50%, -50%);
     border-radius: var(--lg);
-    padding: var(--XL) 0 0;
-    max-height: calc(100vh - var(--XL));
+    padding: var(--xl) 0 0;
+    max-height: calc(100vh - var(--xl));
     overflow: hidden;
     display: none;
     opacity: 0;
@@ -1774,11 +1774,11 @@ I {
         }
         .quote_start {
             align-self: flex-start;
-            transform: translateY(-var(--XL));
+            transform: translateY(-var(--xl));
         }
 
         .quote_end {
-            transform: translateY(var(--XL));
+            transform: translateY(var(--xl));
             align-self: flex-end;
         }
         .icon_container {
@@ -1786,7 +1786,7 @@ I {
         }
     }
     .author_container {
-        margin-top: var(--XL);
+        margin-top: var(--xl);
         @include flex(column, flex-end, flex-end);
         SPAN {
             display: block;
@@ -1796,8 +1796,8 @@ I {
             margin-bottom: var(--md);
             i {
                 font-size: var(--fontSizeMClamp);
-                color: var(--SC);
-                font-weight: var(--FW_B);
+                color: var(--sc);
+                font-weight: var(--fw_b);
             }
         }
         .author_info {
@@ -1887,11 +1887,11 @@ I {
         justify-content: space-between;
         width: 100%;
         max-width: 35rem;
-        gap: var(--XL);
+        gap: var(--xl);
         .btn {
             max-width: 15rem;
             min-width: 10rem;
-            padding: var(--lg) var(--XL);
+            padding: var(--lg) var(--xl);
         }
     }
     .content {
@@ -1919,24 +1919,24 @@ I {
             margin: 0;
         }
         .title_salute {
-            font-size: var(--fs_XL);
+            font-size: var(--fs_xl);
             color: var(--fc);
         }
         .title_name {
             font-size: var(--fontSizeXLClamp);
 
-            color: var(--SC);
+            color: var(--sc);
         }
         .title_effect {
             animation: blink 500ms 0s infinite alternate;
             color: var(--fc);
         }
         .swipe_animation_container_half {
-            padding: 0 var(--XL);
+            padding: 0 var(--xl);
         }
         .about_text {
             font-size: var(--fontSizeMClamp);
-            margin-top: var(--XL);
+            margin-top: var(--xl);
         }
     }
     .about_img {
@@ -1986,7 +1986,7 @@ I {
     padding: var(--lg);
     .badge_name {
         color: var(--tc);
-        font-size: var(--fs_N);
+        font-size: var(--fs_n);
         line-height: 1;
         text-align: center;
         width: 100%;
@@ -2000,7 +2000,7 @@ I {
     justify-content: space-between;
     background: var(--bgC_off);
     border-radius: var(--md);
-    gap: var(--XL);
+    gap: var(--xl);
     .badge_name {
         margin-top: var(--md);
     }
@@ -2028,17 +2028,17 @@ I {
         max-width: 800px;
         width: 100%;
         H3 {
-            font-size: var(--fs_L);
+            font-size: var(--fs_l);
             text-align: center;
         }
     }
     .whatsapp_btn {
-        padding: 0 var(--XL);
+        padding: 0 var(--xl);
         width: fit-content;
         gap: var(--sm);
         background: var(--bgC_off);
         border-radius: 3rem;
-        margin-top: var(--XL);
+        margin-top: var(--xl);
         color: var(--tc);
 
         &:hover {
@@ -2185,7 +2185,7 @@ I {
             @include flexCenter();
             height: var(--iconD);
             min-width: var(--iconD);
-            font-size: var(--fs_L);
+            font-size: var(--fs_l);
         }
     }
     .social_btns_container {
@@ -2202,7 +2202,7 @@ I {
     flex-direction: column;
     position: fixed;
     bottom: 4rem;
-    left: var(--XL);
+    left: var(--xl);
     min-height: var(--iconD);
     z-index: 4;
     fill: var(--fc);
