--- a/src/css/style.css
+++ b/src/css/style.css
@@ -65,12 +65,10 @@
   --black: rgb(26, 26, 26);
   --blackT: rgb(5, 5, 5, 0.75);
   --blackST: rgb(5, 5, 5, 0.5);
-  --blackUT: rgb(5, 5, 5, 0.25);
   --blackOff: rgb(5, 5, 5);
   --white: rgb(245, 245, 245);
   --whiteT: rgb(250, 250, 250, 0.75);
   --whiteST: rgb(250, 250, 250, 0.5);
-  --whiteUT: rgb(250, 250, 250, 0.25);
   --whiteOff: rgb(250, 250, 250);
   --lightRed: hsl(0, 100%, 67%);
   --bgLightRed: hsl(0, 100%, 67%, 0.075);
@@ -120,7 +118,6 @@
   --bgC_t: var(--whiteT);
   --bgC_st: var(--whiteST);
   --vueIconText: rgb(51, 51, 51);
-  --bgHeaderSectionContact: linear-gradient(var(--bgC), rgba(255, 255, 255, 0.5), var(--bgC));
 }
 
 .dark {
@@ -133,7 +130,6 @@
   --bgC_t: var(--blackT);
   --bgC_st: var(--blackST);
   --vueIconText: rgb(204, 204, 204);
-  --bgHeaderSectionContact: linear-gradient(var(--bgC) 10%, rgba(0, 0, 0, 0.5), var(--bgC) 90%);
 }
 
 *,
@@ -153,6 +149,7 @@ BODY {
   --t_scale: scale 500ms cubic-bezier(0.51, -0.42, 0.06, 1.45);
   --fs_nvh: calc(100svh - var(--nvh));
   --backgroundHero: linear-gradient(transparent, var(--bgC_off));
+  --bgHeaderSectionContact: linear-gradient(var(--bgC_off) 10%, var(--bgC_st), var(--bgC_off) 90%);
   --danger: var(--lightRed);
   --bgDanger: var(--bgLightRed);
   --good: var(--greenTeal);
@@ -1984,6 +1981,9 @@ I {
 }
 .about_section PICTURE:hover IMG {
   transform: translateY(0);
+}
+.about_section .flex_responsive {
+  align-items: center;
 }
 
 .badge {
