error transpareci divider fixed

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -105,7 +105,7 @@
   --t_f: all 350ms ease-in-out;
   --t_M: all 750ms ease-in-out;
   --t_s: all 1000ms ease-in-out;
-  --titanimFont: "Titillium Web", sans-serif;
+  --titilliumFont: "Titillium Web", sans-serif;
 }
 
 .light {
@@ -138,7 +138,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: var(--titanimFont);
+  font-family: var(--titilliumFont);
   font-weight: 400;
   font-style: normal;
 }
@@ -789,7 +789,7 @@ I {
 }
 
 .label_btn {
-  /* font-family: var(--titanimFont); */
+  /* font-family: var(--titilliumFont); */
   font-size: var(--fs_n);
   font-weight: var(--fw_n);
   display: block;
@@ -1742,7 +1742,7 @@ I {
 
 .section_divider {
   width: 100%;
-  background: var(--bgC_t);
+  background: var(--bgC_off);
   display: flex;
   justify-content: center;
   align-items: center;
