--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2365,10 +2365,12 @@ I {
 
 [position-social=top] {
   top: 2rem;
+  bottom: inherit;
   flex-direction: column;
 }
 
 [position-social=bottom] {
+  top: inherit;
   bottom: 2rem;
   flex-direction: column-reverse;
 }
