--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2109,7 +2109,7 @@ I {
   width: 100%;
   background: var(--navBg);
   z-index: 5;
-  transition: height 500ms ease;
+  transition: all 500ms ease;
   display: flex;
   justify-content: center;
   align-items: center;
