--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -2082,7 +2082,7 @@ I {
     width: 100%;
     background: var(--navBg);
     z-index: 5;
-    transition: height 500ms ease;
+    transition: all 500ms ease;
     @include flexCenter();
     .content {
         padding: 0;
