--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2165,6 +2165,8 @@ I {
   position: fixed;
   left: 0;
   right: 0;
+  top: var(--top);
+  bottom: var(--bottom);
   border-radius: var(--menuRadius);
   display: flex;
   justify-content: center;
@@ -2230,11 +2232,12 @@ I {
   align-items: center;
   flex-direction: column;
   position: fixed;
-  bottom: 4rem;
+  top: var(--top);
+  bottom: var(--bottom);
   left: var(--xl);
   min-height: var(--iconD);
-  z-index: 4;
   fill: var(--fc);
+  transition: all 500ms ease;
 }
 .menu_social_container .menu_social_btns_container {
   height: auto;
@@ -2364,14 +2367,14 @@ I {
 }
 
 [position-social=top] {
-  top: 2rem;
-  bottom: inherit;
+  --top: 2rem;
+  --bottom: auto;
   flex-direction: column;
 }
 
 [position-social=bottom] {
-  top: inherit;
-  bottom: 2rem;
+  --top: auto;
+  --bottom: 2rem;
   flex-direction: column-reverse;
 }
 
@@ -2379,14 +2382,16 @@ I {
   --menuPosition: translateY(-100%);
   --menuDirection: column;
   --menuRadius: 0 0 var(--lg) var(--lg);
-  top: 0;
+  --top: 0;
+  --bottom: auto;
 }
 
 [position-menu=bottom] {
   --menuPosition: translateY(100%);
   --menuDirection: column-reverse;
   --menuRadius: var(--lg) var(--lg) 0 0;
-  bottom: 0;
+  --top: auto;
+  --bottom: 0;
 }
 
 [size=big] {
