--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2230,7 +2230,7 @@ I {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  flex-direction: var(--direction);
   position: fixed;
   top: var(--top);
   bottom: var(--bottom);
@@ -2238,6 +2238,7 @@ I {
   min-height: var(--iconD);
   fill: var(--fc);
   transition: all 500ms ease;
+  z-index: 4;
 }
 .menu_social_container .menu_social_btns_container {
   height: auto;
@@ -2369,13 +2370,13 @@ I {
 [position-social=top] {
   --top: 2rem;
   --bottom: auto;
-  flex-direction: column;
+  --direction: column;
 }
 
 [position-social=bottom] {
   --top: auto;
   --bottom: 2rem;
-  flex-direction: column-reverse;
+  --direction: column-reverse;
 }
 
 [position-menu=top] {
