--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1023,6 +1023,9 @@ I {
     .header_bubble {
         background: url(../img/backgrounds/graffitiSmall.webp);
     }
+    .btns_container {
+        width: 100%;
+    }
 }
 .info_bubble {
     padding: var(--lg);
